welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:Int=Null

while (!estSurBiscuit) {
	avance()
}
	